--- a/report/interim/includes.tex
+++ b/report/interim/includes.tex
@@ -33,6 +33,7 @@
 \usepackage{array}
 \usepackage{latexsym}
 \usepackage[pdftex,pagebackref,hypertexnames=false,colorlinks]{hyperref} % provide links in pdf
+\usepackage{amsfonts}
 
 \hypersetup{pdftitle={},
   pdfsubject={}, 
