--- a/report/interim/main.tex
+++ b/report/interim/main.tex
@@ -6,7 +6,8 @@
 % Some definitions for the title page
 \newcommand{\reporttitle}{A Type Checker With Support For Mutability And Dependent Types}
 \newcommand{\reportauthor}{Charlie Lidbury}
-\newcommand{\supervisor}{Steffen van Bakel}
+\newcommand{\supervisorA}{Steffen van Bakel}
+\newcommand{\supervisorB}{Nicolas Wu}
 \newcommand{\reporttype}{Interim Report}
 \newcommand{\degreetype}{MEng Computing} 
 
@@ -53,7 +54,8 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Introduction}
-This research hopes to develop a type-checker that is capable of type-checking languages that support both mutation and a kind of type called dependent types.
+\section{The Problem}
+This research hopes to develop a type-checker that is capable of type-checking languages that support both mutation and a kind of type called dependent types. It will do this by removing mutation from the code before type checking, so the type checker only has to reason about immutable code.
 
 Dependent types are covered properly in the background section, but for now, it's enough to know they're a feature that allows you to check even more properties than just type safety at compile time. For instance, instead of just being able to say a variable $x$ is an integer, you can say it's an \textit{even} integer, and reject programs like $x := 5$ at compile time, instead of waiting for them to go wrong at runtime.
 
@@ -62,6 +64,16 @@ This type-checker will support mutation, which is when a variable's value is cha
 This type-checker is being built to hopefully be used for a larger, more useful language in the future, called Ochre. Ochre which will have both the speed of \textit{systems languages} like C and Rust and the ability to reason about runtime behaviour at compile time of \textit{theorem provers} like Agda and Coq. Exactly what systems languages and theorem provers are is discussed in Chapter \ref{background}.
 
 For now, I plan on presenting this type-checker in the form of an implementation; however, there is a good argument for focusing more on the theory behind this type-checker, for instance by presenting a set of typing rules or an abstract algorithm. Whether an implementation-heavy or theory-heavy approach is better is an open, and very important question, which is discussed in [ref].
+
+
+\subsection{Why Is It Hard?}
+The problem with having these features together in the same language is that a value that another variable's type depends on can be mutated, which changes the \textit{type} of the other variable. Concretely: if we have a variable $x: T$, and another variable $y: F(x)$ whose type depends on $x$, we can assign a new value to $x$ which in turn changes the type $F(x)$; now $y$ is ill-typed because its type has changed, but not it's value. The programmer could fix this by reassigning $y$ with a new value of type $F(x)$, if this happens before $y$ is ever used, the compiler should be able to identify this interaction as type-safe.
+
+\section{The Solution}
+\label{thesolution}
+The technique this research presents goes as follows: convert the source code from the programmer, which will contain mutation, into a functionally equivalent (but maybe inefficient) immutable version, which can be dependently type-checked. Once this immutable version has been type-checked, the original mutable version can be executed, with full efficiency granted to it by mutability. \todo{Example of Rust doing this better}.
+
+Because this translation has been shown to be behaviour preserving [cite: Aeneas], we know properties we prove about the immutable version of the programmer's code also hold for the mutable version which will be executed.
 
 \section{Motivation}
 The main contribution of this research will be progress towards making a language that supports both mutability and dependent types, so the motivation behind this research will be the motivation behind these two features, as well as their combination.
@@ -112,14 +124,6 @@ This section explains what advantages this particular method has over other comb
 
 This type checker allows the types and mutable values to be unusually close. In ATS for instance there are basically two separate languages: a dependently typed compile time language and a mutable run-time language. This creates lots of overhead manually linking the two together. For instance, $x : int(y)$ means an integer $x$ with value $y$. In compile time contexts, you use $y$ to refer to the value, in runtime contexts you use $x$. I hope to remove the need for this distinction.
 
-\section{Why Is This Hard?}
-The problem with having these features together in the same language is that a value that another variable's type depends on can be mutated, which changes the \textit{type} of the other variable. Concretely: if we have a variable $x: T$, and another variable $y: F(x)$ whose type depends on $x$, we can assign a new value to $x$ which in turn changes the type $F(x)$; now $y$ is ill-typed because its type has changed, but not it's value. The programmer could fix this by reassigning $y$ with a new value of type $F(x)$, if this happens before $y$ is ever used, the compiler should be able to identify this interaction as type-safe.
-
-\section{Solution}
-The technique this research presents goes as follows: convert the source code from the programmer, which will contain mutation, into a functionally equivalent (but maybe inefficient) immutable version, which can be dependently type-checked. Once this immutable version has been type-checked, the original mutable version can be executed, with full efficiency granted to it by mutability. \todo{Example of Rust doing this better}.
-
-Because this translation has been shown to be behaviour preserving [cite: Aeneas], we know properties we prove about the immutable version of the programmers code also hold for the mutable version which will be executed.
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Background}
 \label{background}
@@ -130,20 +134,108 @@ This section explains the concepts required to understand this research.
 \subsection{Mutability}
 Mutability is when the value of a variable can change at runtime. For instance in Rust, \verb|let mut x = 5; x = 6;| first assigns the value $5$ to the variable $x$, then updates it to $6$, which means the value of $x$ depends on the point within the programs execution. This becomes more relevant when you have large objects that get passed around your program, like \verb|let mut v = Vec::new(); v.push(1); v.push(2);| which makes a resizable array on the heap, then pushes $1$ and $2$ to it.
 
-In Rust to make a variable mutable you must annotate its definition with \verb|mut|, but in most languages it is just always enabled, like in C \verb|int x = 5; x = 6;| works.
+In Rust to make a variable mutable you must annotate its definition with \verb|mut|, but in most languages, it is just always enabled, like in C \verb|int x = 5; x = 6;| works.
 
 \subsection{Dependent Types}
+A dependent type is a type that can change based on the value of another variable in the program. For instance, you might have a variable $y$ which is sometimes an integer, and sometimes a boolean, depending on the value of another variable, $x$.
 
+When discussing dependent types, there are two important dependent type constructors: $\Sigma$ and $\Pi$. They're usually referenced together because they're roughly equivalent; the dual of $\Sigma$ types are $\Pi$ types and visa versa, which apparently means something to category theorists. In the following, I use $Vec(\mathbb{Z}, n)$ to denote the type of an $n$-tuple of integers, i.e. $(1, 2, 3): Vec(\mathbb{Z}, 3)$.
+
+\begin{itemize}
+  \item \textbf{Dependent Functions} ($\Pi$ Types) - A dependent function is one whose return type depends on the input value. For instance, you could define a function $f$ which takes a natural $n$, and returns $n$ copies of $42$ in a tuple i.e. $f(3) = (42, 42, 42)$. $f$'s type would be denoted as $f: (\textbf{n}: \mathbb{N}) \rightarrow Vec(\mathbb{Z}, \textbf{n})$ in Agda/Ochre syntax, or $f: \Pi_{\textbf{n}: \mathbb{N}} Vec(\mathbb{Z}, \textbf{n})$ in a more formal mathematical context.
+  \item \textbf{Dependent Pairs} ($\Sigma$ Types) - A dependent pair is a pair where the type of the right element depends on the value of the left element. For instance, you could define a pair $p$ which holds a natural $n$ and a $n$-tuple of integers i.e. $p = (3, (42, 42, 42))$. $p$'s type would be denoted as $p: (\textbf{n}: \mathbb{N}, Vec(\mathbb{Z}, \textbf{n}))$ in Agda/Ochre syntax, or $p: \Sigma_{\textbf{n}: \mathbb{N}} Vec(\mathbb{Z}, \textbf{n})$ in a more formal mathematical context.
+\end{itemize}
+
+A language supports dependent types if it can type-check objects like the aforementioned $f$ and $s$. Just allowing them to exist is not enough. For instance, Python is not dependently typed just because a function's return type can depend on its input, because its type checker doesn't reject programs when you do this wrong. $f$ can be typed in Agda, a dependently typed language with $f: (n: \mathbb{N}) \rightarrow Vec(\mathbb{Z}, n)$ but has no valid type in Haskell, which doesn't support dependent types.
+
+\subsection{Formal Verification with Dependent Types}
+While dependent types can be nice to have by themselves, a large part of their motivation is using them to perform formal verification.
+
+\textbf{If you are willing to accept that dependent types can be used to perform formal verification, you do not need to understand how dependent types can be used for logical reasoning}: none of this information will be used since the goal of this research is not to perform formal verification, it's just to do dependent type checking.
+
+Readers who are nonetheless interested are invited to read Appendix \ref{verificationwithtypes}.
 
 \subsection{Rust}
+The mutable $\rightarrow$ immutable translation this research relies on requires lifetime annotations to work. While ownership and lifetimes are standalone concepts, their only real-world use case so far has been memory management in the Rust programming language. This section explains these concepts in the context of Rust.
 
-\subsubsection{The Borrow Checker}
+Rust is a relatively recent programming language that offers a unique combination of strong (memory) safety guarantees and bare-metal performance.
 
-\subsection{Mutable to Immutable Translation}
+To generate optimal code, systems languages let the programmer manage their memory, and choose memory layouts. In doing so, they typically sacrifice the memory safety guarantees higher-level languages make due to not being able to check the programmer has managed their memory correctly, this is the case in C and C++. Rust uses a concept called \textit{ownership} to recover these memory safety guarantees while still giving the programmer sufficient control to match C and C++'s performance.
 
+\subsubsection{Ownership}
+Ownership is a set of rules that govern how a Rust program manages memory. All programs have to manage the way they use a computer’s memory while running. Some languages have garbage collection that regularly looks for no-longer-used memory as the program runs; in other languages, the programmer must explicitly allocate and free the memory. Rust uses a third approach: memory is managed through a system of ownership with a set of rules that the compiler checks. If any of the rules are violated, the program won’t compile. None of the features of ownership will slow down your program while it’s running. \footnote{Paragraph taken from the Rust Book https://doc.rust-lang.org/book/ch04-01-what-is-ownership.html which I highly recommend for a deeper explanation of ownership.}
 
-\section{Existing Approaches}
-With a goal as broad as \textit{make verification of systems code easier}, I'm operating in a relatively mature research space, with significant industry interest. In this section, I lay out the various approaches researchers have taken to get verified low-level code.
+There are three rules associated with ownership in Rust:
+\begin{itemize}
+  \item Each value in Rust has an owner.
+  \item There can only be one owner at a time.
+  \item When the owner goes out of scope, the value will be dropped.
+\end{itemize}
+
+\subsubsection{Borrowing And The Borrow Checker}
+A consequence of only being able to have one owner of any given value at a time is that passing a value to a function invalidates the variable that used to hold that value. This is referred to as the ownership \textit{moving}. For instance:
+
+\begin{lstlisting}
+  let x = Box::new(5);
+  f(x); // Ownership of x passed to f
+  g(x); // Invalid, we no longer have ownership of x
+\end{lstlisting}
+
+To get around this we could get the functions to give ownership back to us when they return, but this is very syntax-heavy. Rust uses a concept called borrowing in this scenario, which allows you to temporarily give a function access to a value, without giving it ownership. The above example would be done like so:
+
+\begin{lstlisting}
+  let x = Box::new(5);
+  f(&x);
+  g(&x); // Now works
+\end{lstlisting}
+
+Here, \verb|&x| denotes a \textit{reference} to \verb|x|. At runtime, this is represented as a pointer. There are two different types of references in Rust: immutable references, denoted by \verb|&T|, and mutable references denoted by \verb|&mut T|. For any given value, you can either hold a single mutable reference or $n$ immutable references, but never both at the same time. This is called the aliasing xor (exclusive or) constraint, or AXM for short.
+
+The borrow checker keeps track of when these references exist, to ensure AXM is being upheld. To do this the programmer must annotate references with lifetime annotations, so the compiler has the information of how long the programmer intends each reference to last. Checking these lifetimes overlap in compatible ways is the job of the borrow checker.
+
+\subsection{Mutable $\rightarrow$ Immutable Translation}
+To reason about and type-check the mutable code from the programmer, the type checker translates the source code into an immutable version, as outlined in Section \ref{thesolution}.
+
+The crux of this translation is the observation that a function that mutates a value can be replaced by one that instead returns the new value. I.e. if the programmer writes a function with type \verb|&mut i32 -> ()|, it can be replaced by \verb|i32 -> i32|. Which would then be used like this:
+
+\noindent\begin{minipage}{.45\textwidth}
+\begin{lstlisting}[caption=Original]{Name}
+let mut x = 5;
+f(&mut x); // Mutates x
+\end{lstlisting}
+\end{minipage}\hfill
+\begin{minipage}{.45\textwidth}
+\begin{lstlisting}[caption=Translated]{Name}
+let x = 5;
+let x = f(x); // Re-defines x
+\end{lstlisting}
+\end{minipage}
+
+The complexity of this translation comes in handling all language constructs in the general case, for instance, if statements need to return the values they edit. Like so:
+
+\noindent\begin{minipage}{.45\textwidth}
+\begin{lstlisting}[caption=Original]{Name}
+let mut x = 5;
+if x > 3 {
+  x = x + 1; // Mutation
+}
+\end{lstlisting}
+\end{minipage}\hfill
+\begin{minipage}{.45\textwidth}
+\begin{lstlisting}[caption=Translated]{Name}
+let x = 5;
+let x = if x > 3 {
+  x + 1
+} else {
+  x
+};
+\end{lstlisting}
+\end{minipage}
+
+This quickly gets complicated when you start to use more complicated features like for loops and functions which return mutable references. So much so safe Rust isn't even entirely covered by the two main attempts at this translation Electrolysis \cite{} and Aeneas \cite{aeneas}
+
+\section{Related Work}
+With a goal as broad as \textit{make verification of systems code easier} OUTDATED, I'm operating in a relatively mature research space, with significant industry interest. In this section, I lay out the various approaches researchers have taken to get verified low-level code.
 
 \subsection{Systems Theorem Provers}
 There have already been a couple of attempts to make a programming language which is both a systems language and a theorem prover.
@@ -206,6 +298,70 @@ Low* is a subset of another language, F*, which can be extracted into C via a tr
 %% Bibliography
 \bibliographystyle{vancouver}
 \bibliography{references}
+
+\appendix 
+\addcontentsline{toc}{chapter}{APPENDICES}
+
+\chapter{Formal Verification using (Dependent) Types}
+\label{verificationwithtypes}
+
+The primary motivation behind adding dependent types to a language is so you can perform theorem proving/formal verification in the type system. In some languages, like Lean, this is done to mechanize mathematical proofs to prevent errors and/or shorten the review process; in other languages, like F*, Idris or ATS this is done to allow the programmer to reason about the runtime properties of their programs. However, they are all just pure functional languages with dependent types, whether you choose to use this expressive power for maths or programs the underlying type system is the same.
+
+So the question is how can you represent logical statements as (potentially dependent) types and use the type checker to prove them? This is best understood via a simpler version: proving logical tautologies using Haskell's type system.
+
+\subsubsection{Boolean Tautologies in Haskell}
+The Curry-Howard correspondence states there is an equivalence between the theory of computation, and logic. Specifically: types are analogous to statements, and terms (values) are analogous to proofs. Under this analogy, $5 : \mathbb{N}$ states that $5$ is a proof of $\mathbb{N}$.
+
+We can use this to represent logical statements as types. Here is how various constructs in logic translate over to types (given in Haskell).
+
+\begin{tabularx}{\textwidth}{ X|X|X }
+  Logical Statement & Equivalent Haskell Type & Explanation \\
+  \hline \\
+  $\top$ & \verb|()| & Proving true is trivial, so unit type. \\
+  $\bot$ & \verb|!| & There exists no proof of false, so empty type. \\
+  $a \Rightarrow b$ & \verb|a -> b| & If you have a proof of $a$, you can use it to construct a proof of $b$. \\
+  $a \wedge b$ & \verb|(a, b)| & A proof of $a$ and a proof of $b$ combined into one proof. \\
+  $a \vee b$ & \verb|Either a b| & This proof was either constructed in the presence of a proof of $a$ or a proof of $b$.
+\end{tabularx}
+
+For example, to prove the logical statement $(a \wedge b) \Rightarrow a$, we must define a Haskell term with type \verb|(a, b) -> a|, which can be done as such:
+
+\begin{lstlisting}
+proof :: (a, b) -> a
+proof (a, b) = a
+\end{lstlisting}
+
+For another example, we can prove $((a \wedge b) \vee (a \wedge c)) \Rightarrow (a \wedge (b \vee c))$, which you might want to convince yourself of separately before moving on, by providing a Haskell term of type \verb|Either (a, b) (a, c) -> (a, Either b c)|.
+
+\begin{lstlisting}
+proof' :: Either (a, b) (a, c) -> (a, Either b c)
+proof' (Left (a, b)) = (a, Left b)
+proof' (Right (a, c)) = (a, Right c)
+\end{lstlisting}
+
+% We now set out to represent statements in logic as types, and their proofs as terms.
+% \begin{itemize}
+%   \item A proof of $true$ should be trivial, just by knowing that we are trying to prove $true$ should be enough for us to construct the proof. For this reason, we choose to represent $true$ as the type with a single term, $\top$; otherwise known as $1$ or $()$ (``unit''). There is exactly 1 term of type $\top$, which is also denoted as whatever the type is. E.g. in Haskell \verb|(): ()|. This means that whenever we need to generate a proof of $true$, we can do so trivially because the proof is $()$.
+%   \item A proof of $false$ should be impossible since $false$ can never be proven true, fso we represent it with an empty type, $\bot$; also known as $0$ or $!$. There are no terms of type $\bot$.
+%   \item Logical implication, $a \rightarrow b$ means if we're given a proof of $a$, and can derive a proof of $b$, we have proven $a \rightarrow b$. It is as though the proof is taking another proof as input. We represent logical implication as the function type, also denoted by $\rightarrow$. For instance, if we could make a type-checking term \verb|f| of type \verb|() -> ()| in Haskell, we would have proven that $true \rightarrow true$. This is trivial with \verb|f () = ()|.
+%   \item Conjunction, $a \wedge b$ (logical and), means we have proven both $a$ and $b$. We represent this with the pair $(a, b)$. To get a term of type $(a, b)$ we must have both a term of type $a$ and a term of type $b$, which is analogous to having a proof of $a$ \textit{and} a proof of $b$.
+%   \item Disjunction, $a \vee b$ (logical or), means we have either proven $a$ or $b$. We represent this with the slightly less mathematical \verb|Either a b|. If we have a term of type $a$, we can produce an \verb|Either a b| with \verb|Left a|, and if we have a term of type $b$ we can produce an \verb|Either a b| with \verb|Right b|. This is analogous to having either a proof of $a$, \textit{or} a proof of $b$. 
+% \end{itemize}
+
+With this we can construct proofs for logical tautologies, but how do we go further and construct proofs for statements like ``If you get any number and double it, you get an even number''.
+
+\subsubsection{Dependent Types are Quantifiers}
+Let's now define a function $even$ which returns a type, such that any term of type $even(n)$ is proof that $n$ is even. To do this, $even$ returns a \textit{type}: $\top$ if $n$ is even, $\bot$ otherwise. I.e. $even(4) = \top$ and $even(5) = \bot$. The logical statement $\forall n : \mathbb{Z}. even(2n)$ can be represented by the type $(n: \mathbb{Z}) \rightarrow even(2 * n)$. If we had a term of this type, we could give it any integer $n$, and it would return proof that $2n$ is even.
+
+This cannot be represented in Haskell, because $(\textbf{n}: \mathbb{Z}) \rightarrow even(2 * \textbf{n})$ is a dependent type, hence we need a dependently typed language like Agda. This is an example of Haskell's non-dependent type system not being able to express quantifiers like $\forall$ or $\exists$ over values.
+
+% this is optional section
+% types are statements, programs are proofs
+% normal tautologies in Haskell
+% how pi and sigma types denote qualifiers
+
+% what is formal verification
+% outline of various methods for doing it
 
 
 \end{document}
