--- a/report/interim/titlepage.tex
+++ b/report/interim/titlepage.tex
@@ -40,8 +40,9 @@
 ~
 \begin{minipage}{0.4\textwidth}
 \begin{flushright} \large
-\emph{Supervisor:} \\
-\supervisor % Supervisor's Name
+\emph{Supervisor(s):} \\
+\supervisorA \\ % Supervisor's Name
+\supervisorB % Supervisor's Name
 \end{flushright}
 \end{minipage}\\[4cm]
 
